
message ProcessMessage
{
	optional string processname = 1;
	optional uint32 pid = 2;
	
	optional double userCpuLoad = 3;
	optional double systemCpuLoad = 4;
	
	optional double systemCpuUtilization = 5;
	optional double userCpuUtilization = 6;
	
	optional double memoryUtilization = 7;
	
	optional uint32 networkInUtilization = 8;
	optional uint32 networkOutUtilization = 9;
	
	optional uint32 networkInBytes = 10;
	optional uint32 networkOutBytes = 11;
	
	optional string hostname = 12;
	optional string user = 13;
	optional string startTime = 14;
	optional uint32 numThreads = 15;
	
	optional bool isTerminated = 16 [default = false];
}

message ProcessCollectorMessage
{
	repeated ProcessMessage processmessage = 1;
}